--- a/swri_image_util/package.xml
+++ b/swri_image_util/package.xml
@@ -15,6 +15,7 @@
   <buildtool_depend>pkg-config</buildtool_depend>
 
   <depend>ament_index_cpp</depend>
+  <depend>boost</depend>
   <depend>camera_calibration_parsers</depend>
   <depend>cv_bridge</depend>
   <depend>eigen</depend>
