--- a/swri_opencv_util/CMakeLists.txt
+++ b/swri_opencv_util/CMakeLists.txt
@@ -10,14 +10,9 @@ find_package(swri_math_util REQUIRED)
 
 find_package(OpenCV REQUIRED core imgproc highgui)
 
-# The Boost Random library headers and namespaces changed between version
-# 1.46 and 1.47
 find_package(Boost REQUIRED COMPONENTS serialization thread) 
-if(${Boost_LIB_VERSION} MATCHES "1_46*")
-  add_definitions( -DBOOST_1_46 )
-endif(${Boost_LIB_VERSION} MATCHES "1_46*")
 
-include_directories(include ${Boost_INCLUDE_DIRS})
+include_directories(include)
   
 add_library(${PROJECT_NAME}
   src/blend.cpp
@@ -25,12 +20,17 @@ add_library(${PROJECT_NAME}
   src/model_fit.cpp
   src/show.cpp
   src/convert.cpp)
-target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} ${OpenCV_LIBS})
+target_link_libraries(${PROJECT_NAME}
+  Boost::boost
+  Boost::serialization
+  Boost::thread
+  ${OpenCV_LIBS}
+)
 set_property(TARGET ${PROJECT_NAME}
   PROPERTY POSITION_INDEPENDENT_CODE ON)
 ament_target_dependencies(${PROJECT_NAME}
-  "cv_bridge"
-  "swri_math_util"
+  cv_bridge
+  swri_math_util
 )
 
 install(DIRECTORY include/
