--- a/swri_opencv_util/package.xml
+++ b/swri_opencv_util/package.xml
@@ -13,6 +13,7 @@
   
   <buildtool_depend>ament_cmake</buildtool_depend>
   
+  <depend>boost</depend>
   <depend>cv_bridge</depend>
   <depend>swri_math_util</depend>
 
