--- a/swri_roscpp/package.xml
+++ b/swri_roscpp/package.xml
@@ -15,6 +15,7 @@
 
   <build_depend>rosidl_cmake</build_depend>
 
+  <depend>boost</depend>
   <depend>diagnostic_updater</depend>
   <!--
   TODO pjr Is rcl_interfaces the replacement for dynamic reconfig now?
