--- a/swri_transform_util/package.xml
+++ b/swri_transform_util/package.xml
@@ -41,6 +41,11 @@
   <exec_depend>tf2_py</exec_depend>
   -->
 
+  <!--
+  After the unit tests are converted...
+  <test_depend>ament_cmake_gtest</test_depend>
+  -->
+
   <export>
     <build_type>ament_cmake</build_type>
     <rosdoc config="rosdoc.yaml" />
