--- a/swri_image_util/package.xml
+++ b/swri_image_util/package.xml
@@ -34,6 +34,8 @@
   <depend>swri_roscpp</depend>
   <depend>tf2</depend>
 
+  <test_depend>ament_cmake_gtest</test_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
