--- a/swri_roscpp/package.xml
+++ b/swri_roscpp/package.xml
@@ -11,6 +11,7 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>pkg-config</buildtool_depend>
 
   <depend>diagnostic_updater</depend>
   <depend>dynamic_reconfigure</depend>
@@ -19,6 +20,7 @@
   <depend>roscpp</depend>
   <depend>std_msgs</depend>
   <depend>std_srvs</depend>
+  <depend>yaml-cpp</depend>
 
   <test_depend>message_generation</test_depend>
   <test_depend>message_runtime</test_depend>
