Fix boost includes in 16.04

--- a/swri_roscpp/package.xml
+++ b/swri_roscpp/package.xml
@@ -13,6 +13,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <buildtool_depend>pkg-config</buildtool_depend>
 
+  <depend>boost</depend>
   <depend>diagnostic_updater</depend>
   <depend>dynamic_reconfigure</depend>
   <depend>marti_common_msgs</depend>
