--- a/swri_roscpp/CMakeLists.txt
+++ b/swri_roscpp/CMakeLists.txt
@@ -51,6 +51,7 @@ catkin_package(CATKIN_DEPENDS ${RUNTIME_DEPS}
 ### Build Test Node ###
 add_executable(dynamic_parameters_test_node src/nodes/dynamic_parameters_test_node.cpp)
 target_link_libraries(dynamic_parameters_test_node ${catkin_LIBRARIES} ${YamlCpp_LIBRARIES})
+set_target_properties(dynamic_parameters_test_node PROPERTIES COMPILE_FLAGS "-std=c++11")
 
 add_executable(subscriber_test src/nodes/subscriber_test.cpp)
 target_link_libraries(subscriber_test ${catkin_LIBRARIES})
@@ -81,6 +82,7 @@ if (CATKIN_ENABLE_TESTING)
     test/test_dynamic_parameters.test
     test/test_dynamic_parameters.cpp)
   target_link_libraries(test_dynamic_parameters ${catkin_LIBRARIES} ${YamlCpp_LIBRARIES})
+  set_target_properties(test_dynamic_parameters PROPERTIES COMPILE_FLAGS "-std=c++11")
 
   ### Test the TopicService server and client ###
   # This is a little different from the way tests are normally declared because we
