Convert initialize_origin launch file to ROS 2
Signed-off-by: P. J. Reed <preed@swri.org>

--- a/swri_transform_util/package.xml
+++ b/swri_transform_util/package.xml
@@ -37,6 +37,8 @@
   <depend>tf2_ros</depend>
   <depend>yaml-cpp</depend>
 
+  <exec_depend>launch_xml</exec_depend>
+
   <!--
   When we've got tf support for Python...
   <exec_depend>tf2_py</exec_depend>
