Fix initialize origin (#572)
* Fix tf stuff in ROS2

Signed-off-by: P. J. Reed <preed@swri.org>

--- a/swri_transform_util/package.xml
+++ b/swri_transform_util/package.xml
@@ -37,10 +37,9 @@
   <depend>tf2_ros</depend>
   <depend>yaml-cpp</depend>
 
-  <!--
-  When we've got tf support for Python...
-  <exec_depend>tf2_py</exec_depend>
-  -->
+  <!-- XML-based launching and tf2_py are only supported in Eloquent -->
+  <exec_depend condition="$ROS_DISTRO != dashing">launch_xml</exec_depend>
+  <exec_depend condition="$ROS_DISTRO != dashing">tf2_py</exec_depend>
 
   <!--
   After the unit tests are converted...
