--- a/swri_prefix_tools/CMakeLists.txt
+++ b/swri_prefix_tools/CMakeLists.txt
@@ -4,8 +4,10 @@ project(swri_prefix_tools)
 find_package(catkin REQUIRED)
 catkin_package()
 
-install(PROGRAMS xterm_prefix
-                 xterm_prefix_callgrind
+catkin_install_python(PROGRAMS xterm_prefix
+        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
+install(PROGRAMS xterm_prefix_callgrind
                  xterm_prefix_callgrind_wait
                  xterm_prefix_gdb
                  xterm_prefix_hold
