--- a/swri_prefix_tools/package.xml
+++ b/swri_prefix_tools/package.xml
@@ -14,7 +14,8 @@
   
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <exec_depend>python-psutil</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-psutil</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-psutil</exec_depend>
   
   <export>
     <build_type>ament_cmake</build_type>
