--- a/swri_prefix_tools/CMakeLists.txt
+++ b/swri_prefix_tools/CMakeLists.txt
@@ -3,10 +3,8 @@ project(swri_prefix_tools)
 
 find_package(ament_cmake REQUIRED)
 
-catkin_install_python(PROGRAMS xterm_prefix
-        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
-install(PROGRAMS xterm_prefix_callgrind
+install(PROGRAMS xterm_prefix
+                 xterm_prefix_callgrind
                  xterm_prefix_callgrind_wait
                  xterm_prefix_gdb
                  xterm_prefix_hold
