Fix compatibility with older Boost
Signed-off-by: P. J. Reed <preed@swri.org>

--- a/swri_transform_util/CMakeLists.txt
+++ b/swri_transform_util/CMakeLists.txt
@@ -73,7 +73,7 @@ add_library(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME}
   ${catkin_LIBRARIES}
   ${PROJ_LIBRARIES}
-  Boost::headers
+  Boost::boost
   opencv_calib3d
   opencv_core
   opencv_highgui
