--- a/swri_transform_util/CMakeLists.txt
+++ b/swri_transform_util/CMakeLists.txt
@@ -21,7 +21,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_python_setup()
 
 find_package(OpenCV  REQUIRED calib3d core highgui imgproc video)
-find_package(Boost REQUIRED)
+find_package(Boost REQUIRED COMPONENTS serialization thread)
 
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(PROJ proj)
@@ -73,7 +73,8 @@ add_library(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME}
   ${catkin_LIBRARIES}
   ${PROJ_LIBRARIES}
-  Boost::boost
+  Boost::serialization
+  Boost::thread
   opencv_calib3d
   opencv_core
   opencv_highgui
