Acknowledge geos warning
Signed-off-by: P. J. Reed <preed@swri.org>

--- a/swri_geometry_util/CMakeLists.txt
+++ b/swri_geometry_util/CMakeLists.txt
@@ -49,6 +49,7 @@ add_library(${PROJECT_NAME}
   src/intersection.cpp
   src/polygon.cpp
 )
+target_compile_definitions(${PROJECT_NAME} PUBLIC "-DWE_ACKNOWLEDGE_THAT_THE_GEOS_CPLUSPLUS_API_IS_UNSTABLE")
 target_link_libraries(${PROJECT_NAME}
   ${catkin_LIBRARIES}
   ${GEOS_LIBRARIES}
