--- a/swri_serial_util/CMakeLists.txt
+++ b/swri_serial_util/CMakeLists.txt
@@ -1,18 +1,24 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(swri_serial_util)
 
+find_package(Boost REQUIRED)
+
 find_package(catkin REQUIRED)
 
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
+  DEPENDS Boost
 )
 
 include_directories(include ${catkin_INCLUDE_DIRS})
   
 add_library(${PROJECT_NAME} 
     src/serial_port.cpp)
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
+target_link_libraries(${PROJECT_NAME}
+  ${catkin_LIBRARIES}
+  Boost::boost
+)
 
 install(DIRECTORY include/${PROJECT_NAME}/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
