--- a/swri_system_util/package.xml
+++ b/swri_system_util/package.xml
@@ -13,6 +13,8 @@
   
   <buildtool_depend>catkin</buildtool_depend>
   
+  <depend>libboost-filesystem</depend>
+  <depend>libboost-regex</depend>
   <depend>roscpp</depend>
   <test_depend>rostest</test_depend>
 
