--- a/swri_route_util/CMakeLists.txt
+++ b/swri_route_util/CMakeLists.txt
@@ -14,6 +14,11 @@ set(BUILD_DEPS
 set(RUNTIME_DEPS ${BUILD_DEPS})
 
 find_package(Boost REQUIRED)
+# Workaround for header-only Boost issue in older versions of cmake:
+# https://gitlab.kitware.com/cmake/cmake/-/issues/18643
+add_library(${PROJECT_NAME}_boost INTERFACE IMPORTED)
+set_property(TARGET ${PROJECT_NAME}_boost PROPERTY
+  INTERFACE_INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR})
 
 ### Catkin ###
 find_package(catkin REQUIRED COMPONENTS ${BUILD_DEPS})
@@ -35,7 +40,7 @@ add_library(${PROJECT_NAME}
 set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "-std=c++0x")
 target_link_libraries(${PROJECT_NAME}
   ${catkin_LIBRARIES}
-  Boost::boost
+  ${PROJECT_NAME}_boost
 )
 
 ### Install Libraries and Executables ###
