--- a/swri_serial_util/CMakeLists.txt
+++ b/swri_serial_util/CMakeLists.txt
@@ -2,6 +2,11 @@ cmake_minimum_required(VERSION 3.0.2)
 project(swri_serial_util)
 
 find_package(Boost REQUIRED)
+# Workaround for header-only Boost issue in older versions of cmake:
+# https://gitlab.kitware.com/cmake/cmake/-/issues/18643
+add_library(${PROJECT_NAME}_boost INTERFACE IMPORTED)
+set_property(TARGET ${PROJECT_NAME}_boost PROPERTY
+  INTERFACE_INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR})
 
 find_package(catkin REQUIRED)
 
@@ -17,7 +22,7 @@ add_library(${PROJECT_NAME}
     src/serial_port.cpp)
 target_link_libraries(${PROJECT_NAME}
   ${catkin_LIBRARIES}
-  Boost::boost
+  ${PROJECT_NAME}_boost
 )
 
 install(DIRECTORY include/${PROJECT_NAME}/
