Fix swri_math_util boost dependencies again
Signed-off-by: P. J. Reed <preed@swri.org>

--- a/swri_math_util/CMakeLists.txt
+++ b/swri_math_util/CMakeLists.txt
@@ -5,7 +5,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
 )
 
-find_package(Boost COMPONENTS random thread)
+find_package(Boost REQUIRED COMPONENTS random thread)
 
 catkin_package(
   INCLUDE_DIRS include
