--- a/swri_system_util/package.xml
+++ b/swri_system_util/package.xml
@@ -13,8 +13,7 @@
   
   <buildtool_depend>catkin</buildtool_depend>
   
-  <depend>libboost-filesystem</depend>
-  <depend>libboost-regex</depend>
+  <depend>boost</depend>
   <depend>roscpp</depend>
   <test_depend>rostest</test_depend>
 
