Fix swri_math_util boost dependencies again (#590)
Signed-off-by: P. J. Reed <preed@swri.org>

--- a/swri_math_util/package.xml
+++ b/swri_math_util/package.xml
@@ -13,9 +13,7 @@
   
   <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>libboost-random</depend>
-  <depend>libboost-thread</depend>
-  
+  <depend>boost</depend>
   <depend>roscpp</depend>
 
   <test_depend>rostest</test_depend>
