Fix topic services (#593)
Implement topic services in ROS 2

Distribution Statement A; OPSEC #2893

Signed-off-by: Matthew Bries <mbries@swri.org>

--- a/swri_roscpp/CMakeLists.txt
+++ b/swri_roscpp/CMakeLists.txt
@@ -81,36 +81,27 @@ if (BUILD_TESTING)
   find_package(ament_cmake_gtest REQUIRED)
   find_package(Boost REQUIRED COMPONENTS system)
 
-#  rosidl_generate_interfaces(${PROJECT_NAME}
-#    msg/TestTopicServiceRequest.msg
-#    msg/TestTopicServiceResponse.msg
-#    DEPENDENCIES std_msgs
-#  )
+  rosidl_generate_interfaces(${PROJECT_NAME}
+    msg/TestTopicServiceRequest.msg
+    msg/TestTopicServiceResponse.msg
+    DEPENDENCIES std_msgs marti_common_msgs
+  )
 
-#   ament_add_gtest(test_topic_service test/topic_service_test.cpp)
-#   rosidl_target_interfaces(test_topic_service ${PROJECT_NAME} "rosidl_typesupport_cpp")
-#   target_link_libraries(test_topic_service
-#     Boost::system
-#   )
-#   ament_target_dependencies(test_topic_service
-#     rclcpp
-#     marti_common_msgs
-#     swri_roscpp
-#   )
-
-#  ### Test the TopicService server and client ###
-#  # This is a little different from the way tests are normally declared because we
-#  # have a single binary that contains both server and client tests, but the tests
-#  # themselves are run in separate .test files.
-#  TODO pjr Figure out how to do launch tests in ROS2
-#  add_executable(test_topic_service
-#    test/topic_service_test.cpp)
-#  target_link_libraries(test_topic_service
-#    ${catkin_LIBRARIES}
-#    ${GTEST_LIBRARIES})
-#  add_dependencies(test_topic_service ${${PROJECT_NAME}_EXPORTED_TARGETS})
-#  add_rostest(test/topic_service_client_test.test DEPENDENCIES test_topic_service)
-#  add_rostest(test/topic_service_server_test.test DEPENDENCIES test_topic_service)
+  ament_add_gtest(topic_service_test_server test/topic_service_test.cpp)
+  rosidl_target_interfaces(topic_service_test_server ${PROJECT_NAME} "rosidl_typesupport_cpp")
+  target_link_libraries(topic_service_test_server
+    Boost::system
+    swri_roscpp__rosidl_typesupport_cpp
+  )
+  ament_target_dependencies(topic_service_test_server
+    rclcpp
+    marti_common_msgs
+  )
+  target_include_directories(topic_service_test_server
+    PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+  )
 endif()
 
 ### Install Test Node and Headers ###
@@ -138,4 +129,4 @@ ament_export_dependencies(std_msgs)
 ament_export_dependencies(std_srvs)
 ament_export_include_directories(include)
 
-ament_package()
+ament_package(CONFIG_EXTRAS cmake/swri_roscpp-extras.cmake )
